--- a/level3/Cargo.toml
+++ b/level3/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = [ "cdylib" ]
 [dependencies]
 # Useful crate to handle errors.
 anyhow = "1"
+serde = "1"
 # Crate to simplify working with bytes.
 bytes = "1"
 # General-purpose crate with common HTTP types.
@@ -17,3 +18,6 @@ http = "0.2"
 spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v0.3.0" }
 # Crate that generates Rust Wasm bindings from a WebAssembly interface.
 wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "2f46ce4cc072107153da0cefe15bdc69aa5b84d0" }
+handlebars = "4.0.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.0"
